[package]
name = "planet_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version="0.8.0", features=[ "dynamic"] }
bevy-inspector-egui = "0.12.1"
bevy_rapier3d = { version = "0.16.2", features = [ 'debug-render' ] }
bevy-inspector-egui-rapier = { version = "0.5.0", features = [ 'rapier3d' ] }
peroxide = {version = "*", features = ["nc"]} 

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
